ajaustes de api e configuracao de api de AI

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Initial Catalog=AgroTechSafraDB;Integrated Security=true;TrustServerCertificate=true"
   },
+  "OpenAI": {
+    "ApiKey": "",
+    "Model": "gpt-4o-mini",
+    "MaxTokens": 4000,
+    "Temperature": 0.7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
